# unit27-boundary-engine

./: .gitignore  DESIGN_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: proof_cases.json
examples/sample-project/: README.md
examples/sample-project/u27/: BOUNDARY_REGISTER.md  boundary_report.json  proof_ledger.json
scripts/: verify_wheel.py
src/boundary_engine/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
u27/: BOUNDARY_REGISTER.md  PROOF_PACKET.md  boundary_report.json  proof_ledger.json
u27/evidence/: run-0001.txt  run-0002.txt  run-0003.txt  run-0004.txt  run-0005.txt  run-0006.txt  run-0007.txt  run-0008.txt  run-0009.txt  run-0010.txt  run-0011.txt  run-0013.txt  run-0014.txt  run-0015.txt
