[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unit27-boundary-engine"
version = "0.1.0"
description = "Boundary Engine enforces claim discipline by checking public repo language against recorded proof artifacts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Unit27 Research" }
]
keywords = ["ai", "cli", "research-infrastructure", "evidence", "markdown", "proof", "readme", "testing", "unit27"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
boundary-engine = "boundary_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
